force-app/main/default/objects/Hardware_Fulfillment__e/Hardware_Fulfillment__e.object-meta.xml
<CustomObject>
    <description>Platform Event published on Order activation to route Edge_5G_Enterprise_Router lines to the warehouse ERP inventory system. Consumed by ERP subscriber via ReplayId-based durable subscription. See ADR-003.</description>
    <label>Hardware Fulfillment</label>
    <pluralLabel>Hardware Fulfillments</pluralLabel>
</CustomObject>