force-app/main/default/objects/Hardware_Fulfillment__e/fields/IMEI_Slot_Reference__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Slot_Reference__c</fullName>
    <description>IMEI registration slot reference for Track 2 handoff. When technician scans IMEI at site, this reference links the physical device to the Asset record for network activation.</description>
    <label>IMEI Slot Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>