force-app/main/default/objects/Hardware_Fulfillment__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Salesforce Order record ID. Used by ERP subscriber to correlate fulfillment confirmation back to the Order record.</description>
    <label>Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>