force-app/main/default/objects/Hardware_Fulfillment__e/fields/Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Id__c</fullName>
    <description>Salesforce OrderItem record ID for the Router line. Stamped with ERP_Confirmed__c = true on warehouse acknowledgement.</description>
    <label>Order Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>