force-app/main/default/objects/Hardware_Fulfillment__e/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Number of router units to pick for this site. Minimum 1 per CML validation on the bundle.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>