force-app/main/default/objects/Hardware_Fulfillment__e/fields/Required_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Ship_Date__c</fullName>
    <description>Target ship date for this router. Set to Order.ActivatedDate + 1 day to meet the 3-day Quote-to-Activation North Star Metric. Day 1 target: router shipped.</description>
    <label>Required Ship Date</label>
    <type>Date</type>
</CustomField>