force-app/main/default/objects/Hardware_Fulfillment__e/fields/Router_SKU__c.field-meta.xml
<CustomField>
    <fullName>Router_SKU__c</fullName>
    <description>Product SKU for the router being fulfilled. Always ROUTER_5G_ENT for this bundle. Included for ERP inventory system lookup.</description>
    <label>Router SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>