force-app/main/default/objects/Hardware_Fulfillment__e/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <description>Delivery address for this site. Used by warehouse ERP to determine shipping destination for the router.</description>
    <label>Site Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>